# sneja

./: Makefile  README.md  pyproject.toml
VD_games/: engine.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_main.py  vd_prime.py  vd_progression.py
