[project]
name = "games-project-faizulina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"

